[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 66.0
margin_top = 124.0
margin_right = 142.0
margin_bottom = 162.0
text = "dataText"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="Button"]

[node name="Button2" type="Button" parent="."]
margin_left = 188.0
margin_top = 115.0
margin_right = 307.0
margin_bottom = 166.0
text = "Descarga"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 106.0
margin_top = 11.0
margin_right = 244.0
margin_bottom = 48.0
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 89.0
margin_top = 184.0
margin_right = 290.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 141.0
margin_top = 54.0
margin_right = 199.0
margin_bottom = 78.0
text = "Clave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit3" type="LineEdit" parent="."]
margin_left = 142.0
margin_top = 86.0
margin_right = 200.0
margin_bottom = 110.0
text = "Tabla"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="Button/HTTPRequest" to="." method="_on_HTTPRequest_request_completed2"]
[connection signal="pressed" from="Button2" to="." method="_on_dButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="focus_entered" from="LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="focus_entered" from="LineEdit2" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="LineEdit2" to="." method="_on_LineEdit_focus_exited"]
[connection signal="focus_entered" from="LineEdit3" to="." method="_on_LineEdit3_focus_entered"]
[connection signal="focus_exited" from="LineEdit3" to="." method="_on_LineEdit3_focus_exited"]
